# ITKCLEsperanto

./: .gitignore  CMakeLists.txt  README.rst  itk-module.cmake  setup.py
.github/workflows/: build-test-package.yml  test-gpu.yml
include/: itkCLEAddImageFilter.h  itkCLEAddImageFilter.hxx  itkCLEBinaryGeneratorImageFilter.h  itkCLEBinaryGeneratorImageFilter.hxx  itkCLEBinaryImageFilter.h  itkCLEBinaryImageFilter.hxx  itkCLEContextManager.h  itkCLEDataManager.h  itkCLEDataManager.hxx  itkCLEImage.h  itkCLEImage.hxx  itkCLEImageDataManager.h  itkCLEImageDataManager.hxx  itkCLEImageToImageFilter.h  itkCLEImageToImageFilter.hxx  itkCLEInPlaceImageFilter.h  itkCLEInPlaceImageFilter.hxx  itkCLEUnaryGeneratorImageFilter.h  itkCLEUnaryGeneratorImageFilter.hxx  itkMinimalStandardRandomVariateGenerator.h  itkMyFilter.h  itkMyFilter.hxx
src/: CMakeLists.txt  itkCLEContextManager.cxx  itkMinimalStandardRandomVariateGenerator.cxx
test/: CMakeLists.txt  azure-pipelines.yml  itkCLEAddImageTest.cxx  itkCLEImageTest.cxx  itkMinimalStandardRandomVariateGeneratorTest.cxx  itkMyFilterTest.cxx
wrapping/: CMakeLists.txt  ITKRepositoryGPUPackagesSetup.sh  ITKRepositoryModuleLinuxBuild.sh  dockcross-manylinux-build-module-wheels-opencl.sh  dockcross-manylinux-download-cache.sh  itkCLEAddImageFilter.wrap  itkCLEBaseClasses.wrap  itkCLEBinaryGeneratorImageFilter.wrap  itkCLEDataManager.wrap  itkCLEImage.wrap  itkCLEImageDataManager.wrap  itkCLEImageToImageFilter.wrap  itkCLEInPlaceImageFilter.wrap  itkCLEUnaryGeneratorImageFilter.wrap
wrapping/ITKRepositoryPackageSetupCookieCutter/: cookiecutter.json
wrapping/ITKRepositoryPackageSetupCookieCutter/{{cookiecutter.output_directory}}/: setup.py
wrapping/test/: CMakeLists.txt  itkCLEAddImageTestPython.py  itkCLEImageTestPython.py
